--- a/tesServiceSAP/appsettings.json
+++ b/tesServiceSAP/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
  "SapSettings": {
-  "UserName": "manager",
-  "Password": "Admin123#",
+  "UserName": "Aubrey",
+  "Password": "Aubrey555",
   "CompanyDB": "USER_TRAINING",
   "ServiceLayerUrl": "http://DESKTOP-NPFMUL9:50001/b1s/v1"
 },
